# star-trek-retro-remake

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE.md  README.md  SECURITY.md  STATUS.md  TODO.md  pyproject.toml  pyrightconfig.json  tech-stack-pyside6.md
.claude/: settings.json
.claude/hooks/: session_start.py
.codex/: config.toml
.codex/hooks/: session_start.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design-discussion.yml  feature.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
docs/: architecture.md  conventions.md  credentials.md  deployed.md  specs-plans.md  state.md
docs/adr/: 0001-pure-qt-rendering.md  0002-linux-only.md  0003-model-qt-free.md  0004-toml-not-pickle.md  0005-hand-rolled-state-machine.md  0006-procedural-galaxy.md  0007-uncapped-captain-progression.md  0008-combat-on-sector-grid.md  0009-no-audio-v01.md  0010-hybrid-autosave.md  0011-v01-dock-target.md  0012-ai-generated-assets.md  0013-ruleset-protection-with-admin-bypass.md  template.md
docs/bugs/: INDEX.md  _regen_index.py
docs/design/: DESIGN.md  tech-stack-pyside6.md
docs/design/assets/: compass_artifact_wf-47e48134-fa20-4c73-88d4-272781e9d5d4_text_markdown.md
docs/handoff/: architecture.md  conventions.md  specs-plans.md  state.md
docs/handoff/bugs/: INDEX.md  _regen_index.py
docs/handoff/sessions/: 2026-04.md  2026-05.md  2026-06.md  INDEX.md
docs/research/: 2026-05-23-python314-idioms-game-model-layer.md  2026-05-25-v0.1-step-7-open-questions.md  2026-05-25-v0.1-step-7-spec-assumptions.md  2026-05-26-v0.1-step-8-open-questions.md  2026-05-26-v0.1-step-8-pre-review-research.md  2026-05-28-v0.1-step-9-open-questions-resolution.md  2026-05-28-v0.1-step-9-open-questions.md  2026-05-29-v0.1-step-10-main-window-assumptions.md
docs/sessions/: 2026-04.md  2026-05.md  INDEX.md
docs/specs/: v0.1-model-layer.md  v0.1-step-10-main-window.md  v0.1-step-3-grid-position-and-game-object.md  v0.1-step-4-projection.md  v0.1-step-5-exceptions-events-and-state-stub.md  v0.1-step-6-sector-map-and-station.md  v0.1-step-7-starship-and-turn-manager.md  v0.1-step-8-game-state-manager.md  v0.1-step-9-model-bridge.md
docs/superpowers/plans/: 2026-04-27-v0.1-step-3-implementation.md  2026-04-27-v0.1-step-4-implementation.md  2026-04-27-v0.1-step-5-implementation.md  2026-05-25-v0.1-step-6-implementation.md  2026-05-25-v0.1-step-7-implementation.md  2026-05-26-v0.1-step-8-implementation.md  2026-05-28-v0.1-step-9-implementation.md  2026-05-29-v0.1-step-10-main-window.md
src/stmrr/: __init__.py  __main__.py  app.py
src/stmrr/config/: __init__.py
src/stmrr/controller/: __init__.py  model_bridge.py
src/stmrr/model/: __init__.py  events.py  (+1 more)
tests/integration/: conftest.py  test_app.py
tests/unit/: test_smoke.py
(+42 files in other folders)
