[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stmrr"
version = "0.1.0.dev0"
description = "Star Trek Retro Remake — a turn-based, grid-based PySide6 strategy game inspired by Super Star Trek (1973) and 1990s desktop strategy titles."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
    { name = "Chris Purcell" },
]
keywords = [
    "game",
    "strategy",
    "turn-based",
    "star-trek",
    "pyside6",
    "qt",
    "linux",
    "fan-game",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
dependencies = [
    "PySide6>=6.5",
    "pydantic>=2.0",
    "tcod>=21.0",
    "blinker>=1.8",
    "loguru>=0.7",
    "qtawesome>=1.4",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-env>=1.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "import-linter>=2.0",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/chrisdpurcell/star-trek-retro-remake"
Issues = "https://github.com/chrisdpurcell/star-trek-retro-remake/issues"
Changelog = "https://github.com/chrisdpurcell/star-trek-retro-remake/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stmrr"]

# Ruff: see DESIGN.md §10.6.
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# Mypy: per-module strictness per DESIGN.md §10.6.
[tool.mypy]
python_version = "3.14"
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "stmrr.model.*"
strict = true

[[tool.mypy.overrides]]
module = "stmrr.controller.*"
strict = true

[[tool.mypy.overrides]]
module = "stmrr.config.*"
strict = true

[[tool.mypy.overrides]]
module = "stmrr.view.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = true

# Pytest: headless Qt configured here so `uv run pytest` works without
# a wrapper script. See DESIGN.md §10.3 "Headless Qt".
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stmrr --cov-report=term-missing"
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[tool.coverage.run]
source = ["src/stmrr"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
